RESOLVED FIXED230963
Suppress warnings for implicit copy assignment operator/copy constructor with clang 13
https://bugs.webkit.org/show_bug.cgi?id=230963
Summary Suppress warnings for implicit copy assignment operator/copy constructor with...
Basuke Suzuki
Reported 2021-09-29 09:48:54 PDT
Tons of warnings with clang 13 ../../Source/JavaScriptCore/bytecode/Operands.h:52:5: warning: definition of implicit copy assignment operator for 'Operand' is deprecated because it has a user-declared copy constructor [-Wdeprecated-copy] Operand(const Operand&) = default; ../../Source/WebCore/platform\LayoutUnit.h:88:17: warning: definition of implicit copy constructor for 'LayoutUnit' is deprecated because it has a user-declared copy assignment operator [-Wdeprecated-copy] LayoutUnit& operator=(const LayoutUnit& other) = default;
Attachments
PATCH (5.15 KB, patch)
2021-09-29 10:42 PDT, Basuke Suzuki
no flags
Basuke Suzuki
Comment 1 2021-09-29 10:42:20 PDT
Mark Lam
Comment 2 2021-09-29 10:56:38 PDT
Comment on attachment 439625 [details] PATCH r=me
Basuke Suzuki
Comment 3 2021-09-29 16:07:59 PDT
Thanks Mark!
EWS
Comment 4 2021-09-29 17:21:27 PDT
Committed r283287 (242314@main): <https://commits.webkit.org/242314@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439625 [details].
Radar WebKit Bug Importer
Comment 5 2021-09-29 17:22:25 PDT
Note You need to log in before you can comment on or make changes to this bug.