Suppress warnings for implicit copy assignment operator/copy constructor with clang 13 https://bugs.webkit.org/show_bug.cgi?id=230963

Reviewed by Mark Lam.

Source/JavaScriptCore:

Added default copy constructor to suppress warning.

* bytecode/Operands.h:

Source/WebCore:

No new tests because there is no behavior change.

Added default copy constructor / copy assignment operator to suppress warning.

* platform/LayoutUnit.h:
* platform/LengthBox.h:
* platform/RectEdges.h:
* platform/graphics/FontSelectionAlgorithm.h:
* platform/graphics/ImagePaintingOptions.h:


Canonical link: https://commits.webkit.org/242314@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283287 268f45cc-cd09-0410-ab3c-d52691b4dbfc