Source/WebCore/platform/LengthBox.h
@@ -55,6 +55,7 @@ public:
     }
 
     LengthBox(const LengthBox&) = default;
+    LengthBox& operator=(const LengthBox&) = default;
 
     bool isZero() const
     {
